--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cartas_Magic</string>
     <string name="action_settings">Settings</string>
     <string name="textview">TextView</string>
+    <string name="refresh">Refresh</string>
 </resources>
