--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="textview">TextView</string>
     <string name="refresh">Refresh</string>
+    <string name="nuevo_texto">Nuevo Texto</string>
 </resources>
