--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,12 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="filter">Filter</string>
+    <string name="settings">Settings</string>
+    <string name="color">Color</string>
+    <string name="rarity">Rarity</string>
+    <string name="color1">Color</string>
+    <string name="color4">Color</string>
+    <string name="rarity4">Rarity</string>
+    <string name="name4">Name</string>
+    <string name="type4">Type</string>
 </resources>
