Solucionat el problema amb el filtratge de cartes. Abans tenia dos mètodes diferents: un per filtrar per color i un altre per filtrar per raresa cosa que era incorrecte perquè se solapaven. Ara he introduit només un mètode que seleccioni tant l'ún com l'altre.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
 
 
     <!-- Preferència de Color-->
-    <string-array name="pref_color_list_entries">
+    <string-array name="pref_color_list_values">
         <item>Red</item>
         <item>Green</item>
         <item>Black</item>
@@ -71,7 +71,7 @@
         <item>White</item>
     </string-array>
 
-    <string-array name="pref_color_list_values">
+    <string-array name="pref_color_list_titles">
         <item>Vermell</item>
         <item>Verd</item>
         <item>Negre</item>
