--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="text_detalle">Text detalle</string>
     <string name="titulo_detalle">Titulo detalle</string>
     <string name="resistencia_detalle">Resistencia detalle</string>
+    <string name="type_detalle">Type detalle</string>
 </resources>
