--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cartas_Magic</string>
+    <string name="app_name">Magic Cards</string>
     <string name="action_settings">Settings</string>
     <string name="textview">TextView</string>
     <string name="refresh">Refresh</string>
